--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>Környezetbarát megoldások</title>
 </head>
 <body>
+    <td class="bottles">
+        <img src="palack.jpg" alt="palack>
+        <img src="palack.jpg" alt="palack">
+        <img src="palack.jpg" alt="palack">
+        <img src="palack.jpg" alt="palack">
     <table>
         <tr>
            <h2>Hogyan legyen PET palackból polárpulcsi?</h2> 
         </tr>
         <tr>
-            <td>
-                <p>Ma már a magyarok többsége is követendő szokásnak tartja a háztartásokban, irodákban keletkező hulladék válogatva gyűjtését, bár a Magyarországon jelenleg működő több mint 5000 gyűjtősziget a legfrissebb felmérés szerint még mindig kevés ahhoz, hogy mindenkinek „elég közel” legyen. Pedig egy kis kitérővel rengeteget tehetünk az egyre rosszabb állapotban lévő környezetünkért. </p>
-                <h4>Kevesebb szemét, kevesebb energia, egészségesebb környezet</h4>
-                <p> <a href="https://www.szelektiv.hu"/> A szelektíven gyűjtött hulladék</a> A szétválogatva gyűjtött hulladék újrahasznosítása során azokat az anyagokat, amelyeket egyébként eldobnánk, szennyezve ezzel a környezetet, nyersanyagként használjuk fel. Az újrahasznosítás, előkelőbb nevén a recycling, energia- és nyersanyagkímélő eljárás: egyrészt csökken a valóban szemét, azaz semmi másra nem használható hulladék mennyisége, másrészt a környezet terhelése is, mivel az újrahasznosítható anyagok révén kevesebb természetes nyersanyagra van szükségün </p>
-                <p>Tudtad, hogy</p>
+             <p>Ma már a magyarok többsége is követendő szokásnak tartja a háztartásokban, irodákban keletkező hulladék válogatva gyűjtését, bár a Magyarországon jelenleg működő több mint 5000 gyűjtősziget a legfrissebb felmérés szerint még mindig kevés ahhoz, hogy mindenkinek „elég közel” legyen. Pedig egy kis kitérővel rengeteget tehetünk az egyre rosszabb állapotban lévő környezetünkért. </p>
+            <hr style="width: 50%; margin: 0 auto;">
+            <h4>Kevesebb szemét, kevesebb energia, egészségesebb környezet</h4>
+            <p> <a href="https://www.szelektiv.hu"/> A szelektíven gyűjtött hulladék</a> A szétválogatva gyűjtött hulladék újrahasznosítása során azokat az anyagokat, amelyeket egyébként eldobnánk, szennyezve ezzel a környezetet, nyersanyagként használjuk fel. Az újrahasznosítás, előkelőbb nevén a recycling, energia- és nyersanyagkímélő eljárás: egyrészt csökken a valóban szemét, azaz semmi másra nem használható hulladék mennyisége, másrészt a környezet terhelése is, mivel az újrahasznosítható anyagok révén kevesebb természetes nyersanyagra van szükségün </p>                <p>Tudtad, hogy</p>
                 <ul>
                     <li>naponta 70 dkg szilárd háztartási hulladékot termelünk fejenként (évi 250 kg/fő)?</li>
                     <li>ennek 50%-a szelektíven gyűjthető és újrahasznosítható?</li>
@@ -26,6 +30,16 @@
                     <li>27 db másfél literes PET palack szükséges 1 polár pulóver előállításához?</li
                     <li>Dániában, Svédországban a hulladék 80-90%-át így dolgozzák fel?</li>
                 </ul>
+                <img src="bala.jpg" alt="bala">
+            </td>
+            
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h4>Mi lesz a szelektíven gyűjtött hulladékból?
+                </h4>
+                <p>Sajnos még mindig sokan gondolják azt, hogy a konténereket elszállítás után összeöntik. Ez természetesen nem így történik. A válogatva gyűjtött anyagokból további válogatás és tisztítás után többnyire ugyanaz lesz, ami volt. Az újragyártott üvegből újra üvegpalackok és befőttesüvegek készülnek, a papírból karton, papírtörlő, vécépapír, gipszkarton, és az italos kartondobozokból újra kartondoboz, netán bútorlap. Az aprított üveget felhasználják üveggyapot készítésére vagy készülő új utakban. A legsokoldalúbban a műanyagok használhatók fel. Nemcsak PET palack formájában találkozhatunk újra a bedobált hulladékkal, hanem például DVD-tok, műanyag háztartási eszköz vagy polár pulóver képében. </p>
+
             </td>
         </tr>
     </table>
